<resources>
    <string name="app_name">app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="start_test">start test</string>
    <string name="log_out">Log Out</string>
    <string name="_15_00">15:00</string>
    <string name="aici_vine_intrebarea">Aici vine intrebarea</string>
    <string name="_15">/15</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="sign_up">Sign Up</string>
</resources>