<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0BD7F8"
    tools:context=".SignUpActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="443dp"
        android:layout_height="115dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangleyellow" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="258dp"
        android:layout_height="29dp"
        android:text="V 1.00.01 Quiz_app version"
        android:textColor="#8800FF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.997" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="443dp"
        android:layout_height="115dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/rectangleyellow" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="443dp"
        android:layout_height="115dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/rectangleyellow" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="443dp"
        android:layout_height="115dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/rectangleyellow" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.463" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.442" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.484" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.478" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="146dp"
        android:layout_height="50dp"
        android:background="@drawable/signbutton"
        android:onClick="signUp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:backgroundTint="#8800FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.394" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="274dp"
        android:layout_height="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/quizscrisalb"
        tools:layout_editor_absoluteY="-7dp" />


</androidx.constraintlayout.widget.ConstraintLayout>